--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -1,21 +1,45 @@
-
+.site-nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        height: 100px;
+}
 .site-nav__logo{
+        padding: 24px 0 33px;
         font-family: 'Film P3';
         font-style: normal;
         font-weight: 700;
         font-size: 40px;
         line-height: 1.08;
         letter-spacing: 0.3em;
+        color: #FFFFFF;
+}
+.site-nav__list {
+        display: flex;
+        flex-direction: row;
+        gap: 72px;
+        list-style: none;
+        padding: 30px 0;
+}
+.site-nav__page {
+        display: flex;
+        flex-direction: row;
 }
 .site-nav__link {
+        display: flex;
+        align-items: center;
+        margin-right: 32px;
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
         letter-spacing: 0.02em;
-        color: #FFFFFF;
+        color: #F3C653;
+        text-decoration: none;
 }
+
 .site-nav__phone {
         font-family: 'Montserrat';
         font-style: normal;
@@ -26,5 +50,49 @@
         align-items: center;
         letter-spacing: 0.02em;
         color: #FFFFFF;
+        text-decoration: none;
+        
+}
+
+.site-nav__contact {
+        display: flex;
+        flex-direction: row;
+        gap: 16px;
+        padding: 11px 8px 12px;
+        border: 1px solid rgba(243, 198, 83, 0.7);
+        border-radius: 2px;
+}
+.site-nav__icon {
+        fill: #F3C653;
+        width: 24px;
+        height: 24px;
+        margin-right: 8px;
+}
+
+.site-net__list {
+        display: flex;
+        flex-direction: row;
+        padding: 38px 0;
+        gap: 20px;
+        list-style: none;
+}
+.site-net__button {
+        display: flex;
+        padding: 0;
+        width: 24px;
+        height: 24px;
+        justify-content: center;
+        align-items: center;
+        background-color: transparent;
+        border: none;
+}
+.site-net__icon {
+        width: 22px;
+        height: 20px;
+        fill: #F3C653;
+}
+
+body {
+        background-color: rgba(37, 29, 2, 0.788);
 }
 
