--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -1,3 +1,8 @@
+// header {
+//         width: 100%;
+//         width: 1280px;
+//         height: 100px;
+// }
 .site-nav {
         display: flex;
         flex-direction: row;
@@ -6,14 +11,23 @@
         height: 100px;
 }
 .site-nav__logo{
-        padding: 24px 0 33px;
+        padding-bottom: 16px;
         font-family: 'Film P3';
         font-style: normal;
         font-weight: 700;
-        font-size: 40px;
+        font-size: 39px;
         line-height: 1.08;
         letter-spacing: 0.3em;
         color: #FFFFFF;
+        @media screen and(min-width:1024px) {
+        padding: 24px 0 33px;
+        font-size: 40px;
+        line-height: 1.08;
+        text-decoration: none;
+}
+//         @media screen and(min-width:1280px) {
+//         padding: 24px 0 33px;
+// }
 }
 .site-nav__list {
         display: flex;
@@ -41,6 +55,8 @@
 }
 
 .site-nav__phone {
+        display: none;
+        @media screen and(min-width:1024px) {
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 400;
@@ -53,14 +69,18 @@
         text-decoration: none;
         
 }
+}
 
 .site-nav__contact {
+        border: 0;
+        @media screen and(min-width:1024px) {
         display: flex;
         flex-direction: row;
         gap: 16px;
         padding: 11px 8px 12px;
         border: 1px solid rgba(243, 198, 83, 0.7);
         border-radius: 2px;
+        }
 }
 .site-nav__icon {
         fill: #F3C653;
@@ -68,13 +88,24 @@
         height: 24px;
         margin-right: 8px;
 }
-
+// @media screen and(min-width:414px) {
+        
+// }
+// @media screen and(min-width:1024px) {
+        
+// }
+// @media screen and(min-width:1280px) {
+        
+// }
 .site-net__list {
+        display: none;
+        @media screen and(min-width:1280px) {
         display: flex;
         flex-direction: row;
         padding: 38px 0;
         gap: 20px;
         list-style: none;
+        }      
 }
 .site-net__button {
         display: flex;
@@ -90,6 +121,33 @@
         width: 22px;
         height: 20px;
         fill: #F3C653;
+}
+.site-address {
+        display: flex;
+        margin-right: 0;
+        margin-left: auto;
+        align-items: center;
+        width: 210px;
+        gap: 8px;
+        @media screen and(min-width:1024px) {
+                display: none;
+}
+}
+.site-address__text {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.25;
+        letter-spacing: 0.01em;
+        color: #E5E5E5;
+        text-decoration: none;
+}
+.site-address__icon {
+        display: flex;
+        fill: #F3C653;
+        min-width: 20px;
+        min-height: 20px;
 }
 
 body {
