--- a/sass/partials/_hero-section.scss
+++ b/sass/partials/_hero-section.scss
@@ -1,5 +1,13 @@
-
+.hero-section {
+    width: 1280px;
+    height: 720px;
+    width: 100%;
+}
 .hero__title {
+        display: flex;
+        padding-top: 64px;
+        padding-bottom: 32px;
+        justify-content: center;
         font-family: 'Film P3';
         font-style: normal;
         font-weight: 700;
@@ -9,6 +17,9 @@
         color: #FFFFFF;
 }
 .hero__subtitle {
+        display: flex;
+        padding-bottom: 64px;
+        justify-content: center;
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 600;
@@ -18,7 +29,10 @@
         color: #FFFFFF;
 }
 .hero__slogan {
-    font-family: 'Times New Roman';
+    display: flex;
+        padding-bottom: 137px;
+        justify-content: center;
+        font-family: 'Times New Roman';
         font-style: normal;
         font-weight: 700;
         font-size: 36px;
