--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,3 +2,5 @@
 @import "./utils/vars";
 @import "./partials/header";
 @import "./partials/hero-section";
+@import "./partials/site-address";
+@import "./partials/logo";
