--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -7,17 +7,20 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        align-items: center;
+        align-content: center;
         height: 100px;
 }
 .site-nav__logo {
         padding-top: 16px;
+        margin-right: 52px;
         @media screen and(min-width:1024px) {
         padding: 24px 0 33px;
+        margin-right: 87px;
 
 }
         @media screen and(min-width:1280px) {
         padding: 24px 0 33px;
+        margin-right: 96px;
 }
 }
 .site-nav__list {
@@ -25,14 +28,15 @@
         flex-direction: row;
         gap: 72px;
         list-style: none;
-        padding: 30px 0;
+        // padding: 30px 0;
 }
 .site-nav__page {
         display: flex;
         flex-direction: row;
+        padding: 30px 0;
 }
 .site-nav__link {
-        display: flex;
+        margin-right: 6px;
         align-items: center;
         margin-right: 32px;
         font-family: 'Montserrat';
@@ -43,6 +47,11 @@
         letter-spacing: 0.02em;
         color: #F3C653;
         text-decoration: none;
+        @media screen and(min-width:1024px) {
+        display: flex;
+        margin-right: 32px;
+                }
+        
 }
 
 .site-nav__phone {
@@ -66,9 +75,9 @@
         border: 0;
         @media screen and(min-width:1024px) {
         display: flex;
+        height: 40px;
         flex-direction: row;
         gap: 16px;
-        padding: 11px 8px 12px;
         border: 1px solid rgba(243, 198, 83, 0.7);
         border-radius: 2px;
         }
