--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,3 +4,4 @@
 @import "./partials/hero-section";
 @import "./partials/site-address";
 @import "./partials/logo";
+@import "./partials/modal-table";
