--- a/css/main.css
+++ b/css/main.css
@@ -644,7 +644,7 @@ body {
   border-radius: 25px;
 }
 
-.hero__buttons {
+.table__button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -653,7 +653,7 @@ body {
           justify-content: center;
 }
 @media screen and (min-width: 1280px) {
-  .hero__buttons {
+  .table__button {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
@@ -683,4 +683,83 @@ body {
     font-size: 40px;
     line-height: 1.08;
   }
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  -webkit-transition: opacity var(--transition-timing-function), visibility var(--transition-timing-function);
+  transition: opacity var(--transition-timing-function), visibility var(--transition-timing-function);
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop .is-hidden .modal-table {
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 712px;
+  height: 522px;
+  padding: 60px 15px;
+  border-radius: 2px;
+  background-color: #FFFDEE;
+  -webkit-transition: -webkit-transform var(--transition-timing-function);
+  transition: -webkit-transform var(--transition-timing-function);
+  transition: transform var(--transition-timing-function);
+  transition: transform var(--transition-timing-function), -webkit-transform var(--transition-timing-function);
+}
+
+/* form */
+.order-table {
+  position: relative;
+  margin: 0 auto;
+}
+
+.order-table__title {
+  margin-bottom: 40px;
+  font-family: "Times New Roman";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
+  color: #000000;
+}
+
+.order-table__label {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.21;
+  letter-spacing: 0.02em;
+  color: #C79002;
+}
+.order-table__label:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.order-form__input {
+  width: 100%;
+  height: 54px;
+  border: 1px solid #C79002;
+  border-radius: 2px;
+  padding: 17px 12px;
+  margin-bottom: 8px;
 }/*# sourceMappingURL=main.css.map */
