--- a/sass/partials/_hero-section.scss
+++ b/sass/partials/_hero-section.scss
@@ -87,7 +87,7 @@
     border: 2px solid #FFFFFF;
     border-radius: 25px;
 }
-.hero__buttons {
+.table__button {
     display: flex;
     justify-content: center;
     @media screen and(min-width:1280px) {
