--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import "./base/normalize";
 @import "./utils/vars";
-@import "./partials/header";
+@import "./partials/page-header";
 @import "./partials/hero-section";
 @import "./partials/site-address";
 @import "./partials/logo";
