--- a/sass/partials/_hero-section.scss
+++ b/sass/partials/_hero-section.scss
@@ -1,13 +1,13 @@
 .hero-section {
     // width: 1280px;
     // height: 720px;
+    padding: 70px 15px 20px;
     width: 100%;
 }
 .hero__title {
-        display: flex;
-        padding-top: 70px;
+        // display: flex;
         padding-bottom: 24px;
-        justify-content: center;
+        // justify-content: center;
         font-family: 'Film P3';
         font-style: normal;
         font-weight: 700;
@@ -27,9 +27,9 @@
 }
 }
 .hero__subtitle {
-        display: flex;
-        padding-bottom: 64px;
-        justify-content: center;
+        // display: flex;
+        padding-bottom: 40px;
+        // justify-content: center;
         font-family: 'Montserrat';
         font-style: normal;
         font-weight: 600;
@@ -39,14 +39,14 @@
         color: #FFFFFF;
 }
 .hero__slogan {
-    display: flex;
-        padding-bottom: 137px;
-        justify-content: center;
+        // display: flex;
+        padding-bottom: 113px;
+        // justify-content: center;
         font-family: 'Times New Roman';
         font-style: normal;
         font-weight: 700;
-        font-size: 36px;
-        line-height: 1.14;
+        font-size: 32px;
+        line-height: 1.15;
         letter-spacing: 0.05em;
         color: #FFFFFF;
 }
@@ -67,7 +67,7 @@
     line-height: 1.25;
     letter-spacing: 0.02em;
     color: #F3C653;
-    width: 236px;
+    width: 232px;
     height: 48px;
     background: rgba(0, 0, 0, 0.4);
     border: 2px solid #FFFFFF;
@@ -88,9 +88,41 @@
     border-radius: 25px;
 }
 .table__button {
-    display: flex;
-    justify-content: center;
+    // display: flex;
+    // justify-content: center;
     @media screen and(min-width:1280px) {
+        display: flex;
         justify-content: flex-end;
 }
+}
+.site-net__list {
+    display: block;
+    width: 112px;
+    height: 24px;
+    list-style: none;
+
+    // @media screen and(min-width:1280px) {
+    //     display: flex;
+    //     flex-direction: row;
+    //     padding: 38px 0;
+    //     gap: 20px;
+    //     list-style: none;
+    // }
+}
+
+.site-net__button {
+    // display: flex;
+    padding: 0;
+    width: 24px;
+    height: 24px;
+    // justify-content: center;
+    // align-items: center;
+    background-color: transparent;
+    border: none;
+}
+
+.site-net__icon {
+    width: 22px;
+    height: 20px;
+    fill: #F3C653;
 }
