--- a/sass/partials/_site-address.scss
+++ b/sass/partials/_site-address.scss
@@ -1,5 +1,32 @@
+
 .site-address {
-    align-items: center;
-    width: 210px;
-    gap: 8px;
-}
+        display: block;
+        width: 210px;
+        height: 47px;
+        border: 1px solid rgba(243, 198, 83, 0.7);
+        border-radius: 2px;
+        
+
+        @media screen and(min-width:1024px) {
+            display: none;
+        }
+    }
+
+    .site-address__text {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.25;
+        letter-spacing: 0.01em;
+        color: #E5E5E5;
+        text-decoration: none;
+    }
+
+    .site-address__icon {
+        // display: flex;
+        fill: #F3C653;
+        min-width: 20px;
+        min-height: 20px;
+        margin-right: 8px;
+    }
